syntax = "proto3";

option csharp_namespace = "Boney";

service CompareAndSwapService {
  rpc CompareAndSwap(CompareAndSwapRequest) returns (CompareAndSwapReply);
}

message CompareAndSwapRequest {
	int32 slot = 1;
	int32 invalue = 2;
}

message CompareAndSwapReply {
	int32 outvalue = 1;
}
