syntax = "proto3";

service Paxos {
  rpc Prepare(PrepareRequest) returns (PromiseReply);
  rpc Accept(AcceptRequest) returns (AcceptedReply);
  rpc Decide(DecideRequest) returns (DecideReply);
}

message PrepareRequest {
    int32 slot = 1;
    int32 leaderId = 2;
}
message PromiseReply {
    int32 slot = 1;
    int32 readTimestamp = 2;
    int32 value = 3;
}

message AcceptRequest {
    int32 slot = 1;
    int32 leaderId = 2;
    int32 value = 3;
}
message AcceptedReply {
    int32 slot = 1;
    int32 writeTimestamp = 2;
    int32 value = 3;
}

message DecideRequest {
    int32 slot = 1;
    int32 writeTimestamp = 2;
    int32 value = 3;
}
message DecideReply {
    // empty?
}